Fix editor navbar right spacing issue

--- a/resources/assets/admin/css/settings_global.scss
+++ b/resources/assets/admin/css/settings_global.scss
@@ -143,7 +143,6 @@
 // ff_partial-entries_action_wrap
 .ff_partial-entries_action_wrap {
   justify-content: flex-end;
-
   .partial_entries_search_wrap {
     width: 270px;
     margin-right: 16px;
@@ -158,10 +157,10 @@
 }
 
 .ff_screen_settings,
-.ff_screen_entries {
+.ff_screen_entries,
+.ff_screen_msformentries {
   .ff-navigation-right {
     padding-right: 0;
-
     .el-button {
       margin-right: 0;
     }
@@ -170,11 +169,9 @@
 
 // settings_app
 .settings_app {
-  
   .el-form-item,
   .el-form-item-wrap {
     margin-bottom: 24px;
-
     &:last-child {
       margin-bottom: 0;
     }
